public/try/css/try.scss
@import "mixin.scss";

$brand: #3D6AA2;
$sidebarWidth: 200px;

$light: #b0b0b0;
$middle: #6c6c6c;
$dark: #373737;

$lightBackground: #F0F0F0;
$lightBorder: #e1e1e1;
$grayHighlight: lighten($lightBackground, 10%);
$headerHeight: 35px;

html, body {
  margin: 0;
  min-height: 100%;

  font-family: Helvetica;
  font-size: 13px;
  color: $dark;
}

body {
  position: absolute;
  width: 100%;
  height: 100%;
}

a {
  color: inherit;
  text-decoration: none;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

header {
  background: $brand;
  color: white;
  min-height: $headerHeight;

  > div {
    display: inline-block;
  }

  .branding {
    width: $sidebarWidth;
    font-family: "Courier New";
    line-height: $headerHeight;

    box-sizing: border-box;
    padding-left: 10px;
    font-size: 1.2em;

    span {
      font-weight: bold;
    }
  }

  .actions {
    display: inline-block;

    li {
      display: inline-block;

      a {
        display: inline-block;
        padding: 10px;
        margin-right: 1px;
        background: darken($brand, 5%);

        .no-touch &:hover {
          background: darken($brand, 10%);
        }
      }
    }

  }
}

#wrapper {
  position: absolute;
  top: $headerHeight + 1px;
  width: 100%;
  bottom: 0;

  #sidebar {
    position: absolute;
    width: $sidebarWidth;
    height: 100%;

    box-sizing: border-box;

    a {
      color: $brand;
    }

    li {
      overflow: hidden;
      padding: 10px;
      border-bottom: 1px solid $light;
    }

    h2 {
      display: block;
      font-size: 15px;
      margin: 5px 0;
      margin-bottom: 10px;
    }

    p, h3 {
      font-size: 0.85em;
      line-height: 1.3em;
      margin: 5px 0;
    }

    h3 {
      margin-top: 10px;
    }

  }

  .awesome {
    width: 200px;
    height: 200px;
    position: absolute;
    left: 50%;
    top: 50%;
    margin-left: -100px;
    margin-top: -100px;

    text-align: center;
    background: white;
    border-radius: 100px;

    color: $brand;
    box-shadow: 0 1px 3px gray;

    .bubblingG {
      text-align: center;
      width: 200px;
      margin-top: 90px;
      height: 24px;
    }

    .bubblingG span {
      display: inline-block;
      vertical-align: middle;
      width: 10px;
      height: 10px;
      background: $brand;
      -webkit-border-radius: 50px;
      -webkit-animation: bubblingG 1.3s infinite alternate;
    }

    #bubblingG_1 {
      -webkit-animation-delay: 0s;
    }

    #bubblingG_2 {
      -webkit-animation-delay: 0.3s;
    }

    #bubblingG_3 {
      -webkit-animation-delay: 0.6s;
    }



  }

  #content {
    position: absolute;
    left: $sidebarWidth;
    right: 0;
    height: 100%;

    background: $lightBackground;

    .left {
      position: absolute;
      left: 5px;
      right: 50%;
      top: 5px;
      bottom: 5px;
    }

    .right {
      position: absolute;
      left: 50%;
      right: 5px;
      top: 5px;
      bottom: 5px;
    }

    .files {
      position: absolute;
      left: 0;
      right: 2px;
      height: 100%;
      background: white;

      .tab-view {
        height: 100%;

        display: -webkit-box;
        -webkit-box-orient: vertical;
      }

      .tab-menu {

        background: $lightBackground;

        li {
          display: inline-block;

          position: relative;
          left: 1px;
          margin-left: -1px;
          margin-bottom: -1px;

          .label {
            padding: 3px 30px;
            display: inline-block;
          }

          .close {
            position: absolute;
            right: 5px;
            height: 20px;
            top: 50%;
            margin-top: -10px;
            line-height: 20px;
            display: inline-block;
            color: gray;
          }

          background: $lightBackground;

          border: 1px solid $light;
          border-top-left-radius: 5px;
          border-top-right-radius: 5px;


          &.active {
            background: $grayHighlight;
          }
        }

      }

      .tab-content {
        -webkit-box-flex: 1;
        border: 1px solid $light;

        background: $grayHighlight;
        position: relative;

        textarea {
          position: absolute;
          left: 3px;
          top: 3px;
          bottom: 3px;
          right: 3px;

          border: 0 none;
          margin: 0;
          padding: 0;

          resize: none;
        }
      }

    }

    #result {
      position: absolute;
      left: 2px;
      right: 0;
      top: 0;
      bottom: 0;

      background: white;
      border: 1px solid $light;
      padding: 3px;

      iframe {
        border: 0;
        width: 100%;
        height: 100%;

        position: relative;
      }

      &:before {
        content: "Result";
        display: block;

        border: 1px solid $lightBorder;
        padding: 2px 5px;
        color: gray;

        position: absolute;
        right: 5px;
        top: 5px;
      }

    }

  }

}

.CodeMirror {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

.window-manager {
  position: absolute;
  height: 100%;
  width: 100%;

  > div {
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .back-drop {
    background: rgba(black, 0.3);
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .modal .modal {

    border-radius: 10px;

    background: white;
    position: absolute;
    left: 50%;
    top: 20%;

    width: 400px;
    margin-left: -200px;
    overflow: hidden;

    .modal-header {

      background: lighten($brand, 10%);

      h3 {
        margin: 0;
        color: white;
        font-weight: normal;
      }

      button {
        position: absolute;
        right: 10px;
        top: 10px;

        background: none;
        border: none;
        color: white;
      }
    }

    > div {
      padding: 10px;
    }

    .modal-body {
      max-height: 60vh;
      overflow: auto;
    }

    .modal-footer {
      background: $lightBackground;
      text-align: right;
    }

  }

}

.control-group {
  margin: 10px 0;

  label {
    margin: 0 2px;
  }

  input {
    margin: 2px 0;
    border: 1px solid $lightBorder;
    padding: 5px;
    border-radius: 2px;
    display: block;
    width: 100%;
    box-sizing: border-box;

    &:focus {
      border-color: $brand;
    }
  }

}

.new-file {
  .load-template {
    margin: 0 -5px;
  }
}

.btn {
  display: inline-block;
  padding: 5px 10px;
  border: 1px solid $lightBorder;
  margin: 0 5px;
  border-radius: 5px;

  @include gradient();
}

.btn-success {
  @include gradient(lighten($brand, 10%), $brand);
  color: white;
}

@-webkit-keyframes bubblingG {
  0% {
    width: 10px;
    height: 10px;
    background-color: $brand;
    -webkit-transform: translateY(0);
  }

  100% {
    width: 24px;
    height: 24px;
    background-color: $lightBackground;
    -webkit-transform: translateY(-21px);
  }

}

